--- a/menu-enhanced.html
+++ b/menu-enhanced.html
@@ -6,7 +6,12 @@
     <title>Menu</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
+<style>
+
+
+</style>
 <body>
     <div class="container-menu">
         <div class="container menu">
