update ex02- form-interactive

--- a/form-interactive.html
+++ b/form-interactive.html
@@ -34,7 +34,7 @@
                 <input type="password" id="confirm-password" placeholder="Confirm Password" required />
             </div>
             <div class="form-group form-group-gender">
-                <label for="">Gender </label>
+                <label for="" class="field-label">Gender </label>
                 <div class="form-group-row">
                     <label>
                         <input type="radio" id="male" name="gender" placeholder="Male" checked />
@@ -59,14 +59,14 @@
                 <input type="text" id="address" placeholder="Address" required />
             </div>
             <div class="form-group avata">
-                <label for="avatar-img">Profile Picture (Avatar)</label>
+                <label for="avatar-img" class="field-label">Profile Picture (Avatar)</label>
                 <label for="avatar-img">
                     <img class="avatar-img" src="./img/img-avatar_placeholder.png" alt="Avatar" />
                 </label>
                 <input type="file" id="avatar-img" hidden />
             </div>
             <div class="form-group">
-                <label for="">Communication Preferences</label>
+                <label for="" class="field-label">Communication Preferences</label>
                 <div class="form-group-checkbox">
                     <label>
                         <input type="checkbox" name="send-mail" value="newsletter" checked />
