--- a/form-interactive.html
+++ b/form-interactive.html
@@ -10,9 +10,9 @@
 </head>
 
 <body class="form-body">
-    <div class="container form" auto-complete="off">
+    <div class="container form">
         <h1 class="form-heading">Register</h1>
-        <form action="" class="register-form">
+        <form action="" class="register-form" autocomplete=”false”>
             <div class="form-group">
                 <label for="display-name" class="field-label">Display Name</label>
                 <input type="text" id="display-name" placeholder="Huỳnh Ngân" spellcheck="false" />
